--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "13.2.4",
 		"next-videos": "1.4.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-scroll": "^1.8.9"
 	},
 	"devDependencies": {
 		"sass": "^1.59.3"
