--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^4.12.0",
 		"@tinymce/tinymce-react": "^4.3.0",
+		"dotenv": "^16.0.3",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"next": "13.2.4",
 		"next-videos": "1.4.1",
+		"pg": "^8.10.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-scroll": "^1.8.9"
 	},
 	"devDependencies": {
+		"prisma": "^4.12.0",
 		"sass": "^1.59.3"
 	}
 }
