working on autentification

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 DATABASE_URL="postgresql://postgres:chomik132p@localhost:5432/wetlands"
 # NEXT_PUBLIC_TINYMCE_API_KEY ="y3u7eqq2k4olfmzjs6q11qf131aok1eakxz7m1biag94dcfv"
+JWT_SECRET="cHoMiK132p"
