--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"dependencies": {
 		"@prisma/client": "^4.12.0",
 		"@tinymce/tinymce-react": "^4.3.0",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"next": "13.2.4",
+		"next-auth": "^4.21.1",
 		"next-videos": "1.4.1",
 		"pg": "^8.10.0",
 		"react": "18.2.0",
