--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^16.0.3",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
+		"js-cookie": "^3.0.1",
 		"next": "13.2.4",
 		"next-auth": "^4.21.1",
 		"next-videos": "1.4.1",
